--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
     <div class="initial-sec">
 
         <header>
-            <img class="logo" src="resources/mylogo.png" alt="Logo">
+            <img class="logo" src="Recursos visuales/BIONAT LOGO.png" alt="Logo">
 
             <div class="nav-links">
                 <ul>
