--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
-    <title>Gabriel Salazar</title>
+    <title>Bionaturesse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet" type="text/css" href="styles.css">
@@ -42,13 +42,10 @@
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="https://www.behance.net/gabrielsalazar16" target="_blank"><img src="/resources/behance.png" alt=""></a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/in/gabriel-salazar-sierra-21462b1b6/" target="_blank"><img
-                                src="/resources/linkedin.webp" alt=""></a></li>
-                    <li><a href="https://drive.google.com/file/d/1gv7Xexy1VtIDGaTNK8UlG170P_6ZeWJP/view" target="_blank" ><img src="/resources/HV.png" alt=""></a></li>
-                    <li><a href="https://github.com/AkaGuille/chevrolet-website" target="_blank"><img src="/resources/github.png"
-                                alt=""></a></li>
+                    <li><a href="" target="_blank"> Familias <img src="/resources/behance.png" alt=""> </a></li>
+                    <li><a href="" target="_blank"> Otro <img src="/resources/linkedin.webp" alt=""></a></li>
+                    <li><a href="" target="_blank" > Otro <img src="/resources/HV.png" alt=""></a></li>
+                    <li><a href="" target="_blank"> Otro <img src="/resources/github.png" alt=""></a></li>
                 </ul>
             </div>
 
@@ -62,12 +59,11 @@
 
         <div class="infolanding">
             <h1>Bionaturesse</h1>
-            <p>Creemos en un mundo mejor.</p>
-            <a class="button-58" href="https://drive.google.com/file/d/1gv7Xexy1VtIDGaTNK8UlG170P_6ZeWJP/view" target="_blank">Saber más</a>
+            <p>Marca de cuidado personal, creada a partir de ingredientes naturales e inspirada en la riqueza de la flora y fauna colombiana y su protección. Cada ingrediente tiene un propósito, honrando el poder de la naturaleza para nutrir y equilibrar la piel de manera consciente y sostenible.</p>
+            <a class="button-58" href="https://naturesse.co/pages/bionaturesse" target="_blank">Saber más</a>
         </div>
 
         <div class="mefoto">
-            <img src="/resources/foto.JPG" alt="">
         </div>
 
     </div>
@@ -91,28 +87,28 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/resources/img1.png"
+                <img src="/Recursos visuales/Black and White Animated Get Ready Video.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Diseñador de Medios Interactivos</h5>
-                    <p>Universidad Icesi Cali Valle del Cauca</p>
+                    <h5>Selva amazónica</h5>
+                    <p>Oso de anteojos</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/resources/img2.png"
+                <img src="/Recursos visuales/Black and White Animated Get Ready Video.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Investigador UX</h5>
-                    <p>Capacitado en métodos de investigación, validación estadística</p>
+                  <h5>Selva amazónica</h5>
+                    <p>Oso de anteojos</p>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img src="/resources/img3.png"
+                <img src="/Recursos visuales/Black and White Animated Get Ready Video.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Desarrollador Front End</h5>
-                    <p>Desarrollador front, manejo de JavaScript, HTML5, CSS, React, Python</p>
+               <h5>Selva amazónica</h5>
+                    <p>Oso de anteojos</p>
                 </div>
             </div>
         
@@ -132,36 +128,35 @@
 
 
     <section class="portafolio">
-        <h1>Mi portafolio</h1>
-        <p>Estudiante en Universidad ICESI, facultad de ingeniería, Diseño de Medios Interactivos. Monitor del centro de
-            aprendizaje CREA. Enfoque en UX, UI.
+        <h1>Nuestras familias</h1>
+        <p>Resumen de las familias
         </p>
-        <div class="projects-container" href="https://www.behance.net/gallery/145695963/Hospital-Padrino-UIUX-Project" target="_blank">
+        <div class="projects-container" href="" target="_blank">
             <a class="project-card">
-                <img src="./resources/card1.png" alt="imagen-proyecto">
+                <img src="./Recursos visuales/SELVA AMAZONOICA.jpg" alt="imagen-proyecto">
                 <div class="project-info-container">
-                    <h3>Proyecto Hospital padrino</h3>
-                    <p>Colaboración con la fundación Valle de Lili</p>
+                    <h3>Selva amazónica</h3>
+                    <p>Una de las regiones más importantes del país</p>
                 </div>
             </a>
 
-            <a class="project-card" href="https://www.behance.net/gallery/185589965/enerBit-Para-todos-UIUX-Project" target="_blank">
+            <a class="project-card" href="" target="_blank">
                 <img src="./resources/card2.png" alt="imagen-proyecto">
                 <div class="project-info-container">
-                    <h3>enerBit Para todos - UI/UX Project</h3>
-                    <p>Usabilidad en personas mayores</p>
+                    <h3>Corales del tayrona</h3>
+                    <p>Especies en peligro</p>
                 </div>
             </a>
 
-            <a class="project-card" href="https://www.behance.net/gallery/181221235/RETORAMO" target="_blank">
+            <a class="project-card" href="" target="_blank">
                 <img src="./resources/card3.png" alt="imagen-proyecto">
                 <div class="project-info-container">
-                    <h3>#RETORAMO</h3>
-                    <p>Ganador reto trasnochón 2023-2 con la empresa Ramo</p>
+                    <h3>Manglares del pacífico</h3>
+                    <p>Estructuras esenciales</p>
                 </div>
             </a>
 
-            <a class="project-card" href="https://www.behance.net/gallery/172652609/BU-App-UX-Research-UI-Design-Design-of-Experiment" target="_blank">
+            <a class="project-card" href="" target="_blank">
                 <img src="./resources/card4.png" alt="imagen-proyecto">
                 <div class="project-info-container">
                     <h3>BU App | UX Research - UI Design - Design of Experiment</h3>
@@ -169,7 +164,7 @@
                 </div>
             </a>
 
-            <a class="project-card" href="https://www.behance.net/gallery/150721137/Coca-Cola-out-of-home-experience" target="_blank">
+            <a class="project-card" href="" target="_blank">
                 <img src="./resources/card5.png" alt="imagen-proyecto">
                 <div class="project-info-container">
                     <h3>Coca-Cola out of home experience</h3>
@@ -177,7 +172,7 @@
                 </div>
             </a>
 
-            <a class="project-card" href="https://www.behance.net/gallery/143621753/Video-Lyrics-Wubeat-Tus-besos" target="_blank">
+            <a class="project-card" href="" target="_blank">
                 <img src="./resources/card6.png" alt="imagen-proyecto">
                 <div class="project-info-container">
                     <h3>Video Lyrics- Wubeat Tus besos</h3>
