social media new images

--- a/main.html
+++ b/main.html
@@ -5,14 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <title>Bionaturesse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet" type="text/css" href="styles.css">
-
-
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="main.js"></script>
@@ -42,10 +39,10 @@
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="" target="_blank"> Familias <img src="/resources/behance.png" alt=""> </a></li>
-                    <li><a href="" target="_blank"> Otro <img src="/resources/linkedin.webp" alt=""></a></li>
-                    <li><a href="" target="_blank" > Otro <img src="/resources/HV.png" alt=""></a></li>
-                    <li><a href="" target="_blank"> Otro <img src="/resources/github.png" alt=""></a></li>
+                    <li><a href="" target="_blank">  <img src="/resources/behance.png" alt=""> </a></li>
+                    <li><a href="" target="_blank">  <img src="/resources/linkedin.webp" alt=""></a></li>
+                    <li><a href="" target="_blank" > <img src="/resources/HV.png" alt=""></a></li>
+                    <li><a href="" target="_blank"> <img src="/resources/github.png" alt=""></a></li>
                 </ul>
             </div>
 
@@ -141,7 +138,7 @@
             </a>
 
             <a class="project-card" href="" target="_blank">
-                <img src="./resources/card2.png" alt="imagen-proyecto">
+                <img src="./Recursos visuales/corales.jpg" alt="imagen-proyecto">
                 <div class="project-info-container">
                     <h3>Corales del tayrona</h3>
                     <p>Especies en peligro</p>
@@ -149,34 +146,19 @@
             </a>
 
             <a class="project-card" href="" target="_blank">
-                <img src="./resources/card3.png" alt="imagen-proyecto">
+                <img src="./Recursos visuales/MANGLARES.jpg" alt="imagen-proyecto">
                 <div class="project-info-container">
                     <h3>Manglares del pacífico</h3>
                     <p>Estructuras esenciales</p>
                 </div>
             </a>
 
-            <a class="project-card" href="" target="_blank">
-                <img src="./resources/card4.png" alt="imagen-proyecto">
-                <div class="project-info-container">
-                    <h3>BU App | UX Research - UI Design - Design of Experiment</h3>
-                    <p>Proyecto para agendamiento de citas psicología BU</p>
-                </div>
-            </a>
 
             <a class="project-card" href="" target="_blank">
-                <img src="./resources/card5.png" alt="imagen-proyecto">
+                <img src="./Recursos visuales/Paramo.jpg" alt="imagen-proyecto">
                 <div class="project-info-container">
-                    <h3>Coca-Cola out of home experience</h3>
-                    <p>Proyecto de mobiliario urbano para aumentar leads</p>
-                </div>
-            </a>
-
-            <a class="project-card" href="" target="_blank">
-                <img src="./resources/card6.png" alt="imagen-proyecto">
-                <div class="project-info-container">
-                    <h3>Video Lyrics- Wubeat Tus besos</h3>
-                    <p>Video Lyric, Wubeat, animación análoga 2D</p>
+                    <h3>Flores del páramo</h3>
+                    <p>Las fuentes hídricas más importantes</p>
                 </div>
             </a>
 
@@ -185,8 +167,8 @@
     </section>
 
     <section class="separador">
-        <h1>¿Quién soy y que hago?</h1>
-        <p>Estudiante de diseño de medios interactivos de la Universidad Icesi, con fuerte vocación para trabajar en investigación de usuario para UX, creación de interfaces, piezas gráficas de todo tipo, material audiovisual (vídeos, documentales). Tengo habilidad para desarrollar soluciones de diseño aplicando metodologías como Design Thinking, tengo habilidad para identificar mejoras de producto, usabilidad, realizando evaluaciones heurísticas, dirigiendo pruebas de usuario y demás.
+        <h1>¿Cómo aportamos al medio ambiente?</h1>
+        <p>Somos una marca de cuidado personal comprometida con el bienestar de tu piel y del planeta. Utilizamos ingredientes de origen natural, seleccionados cuidadosamente por su efectividad y bajo impacto ambiental. Nuestros procesos de producción están diseñados para generar residuos biodegradables y seguros, que no afectan negativamente las fuentes hídricas ni los suelos, contribuyendo así a la preservación de los ecosistemas. Además, destinamos un porcentaje de nuestras ganancias a fundaciones dedicadas a la protección del medio ambiente en Colombia, reafirmando nuestro compromiso con la sostenibilidad y el respeto por la biodiversidad que nos inspira.
         </p>
 
 
@@ -198,7 +180,9 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6">
                     <h6>Sobre</h6>
-                    <p class="text-justify">Soy diseñador de interacción, creo soluciones a problemas modernos, hago que las cosas sean fáciles de usar en un mundo donde a veces se olvidan las necesidades del usuario. Me inspiro en grandes figuras como Donald Norman o Jakob Nielsen, fascinados por las ciencias cognitivas.</p>
+                    <p class="text-justify">Marca de cuidado personal, creada a partir de ingredientes naturales e inspirada en la riqueza de la flora y fauna colombiana y su protección. Cada ingrediente tiene un propósito, honrando el poder de la naturaleza para nutrir y equilibrar la piel de manera consciente y sostenible.
+
+</p>
                 </div>
 
                 <div class="col-xs-6 col-md-3">
@@ -229,17 +213,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2024 Todos los derechos reservados por
-                        <a href="#">GabrielSalazar</a>.
+                    <p class="copyright-text">Copyright &copy; 2025 Todos los derechos reservados por
+                        <a href="#">Bionaturesse</a>.
                     </p>
                 </div>
 
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <ul class="social-icons">
-                        <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                         <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
                     </ul>
                 </div>
             </div>
