--- a/main.html
+++ b/main.html
@@ -81,31 +81,43 @@
                 aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
+
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="/Recursos visuales/Black and White Animated Get Ready Video.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Selva amazónica</h5>
+                    <h5>Flores del páramo</h5>
                     <p>Oso de anteojos</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/Recursos visuales/Black and White Animated Get Ready Video.jpg"
+                <img src="/Recursos visuales/JAGUAR.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Selva amazónica</h5>
-                    <p>Oso de anteojos</p>
+                    <p>Jaguar</p>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img src="/Recursos visuales/Black and White Animated Get Ready Video.jpg"
+                <img src="/Recursos visuales/mono araña.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-               <h5>Selva amazónica</h5>
-                    <p>Oso de anteojos</p>
+               <h5>Manglares del pacífico</h5>
+                    <p>Mono araña</p>
+                </div>
+            </div>
+
+              <div class="carousel-item">
+                <img src="/Recursos visuales/tortuga carey.jpg"
+                    class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+               <h5>Corales del Tayrona</h5>
+                    <p>Tortuga carey</p>
                 </div>
             </div>
         
